# ou-http-server

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README  README.md  checkers.txt  docker-compose.yml  server.py
example/certs/: cert.pem  key.pem
src/: HttpTypes.cpp  HttpTypes.h  KVStore.cpp  KVStore.h  Logging.cpp  Logging.h  SSLSocketHandler.cpp  SSLSocketHandler.h  Server.cpp  Server.h  SocketHandler.h  main.cpp
tests/: CMakeLists.txt  test_http.cpp
www/subdir/: subfile.txt
